[#163751560]: fix right-sidebar overflow

--- a/src/app/article/article.scss
+++ b/src/app/article/article.scss
@@ -42,7 +42,6 @@
 }
 
 .right-sidebar {
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
